--- a/client/src/dashboard/page.module.scss
+++ b/client/src/dashboard/page.module.scss
@@ -40,15 +40,21 @@
   
     width: 100%;
     height: 3.6rem;
-    text-align: center;
+
     place-content: center;
     margin-top: 5px;
     color: black;
     padding: inherit;
     background: white;
 
+    
     // background: radial-gradient(circle at -4% -12.9%, rgb(74, 98, 110) 0.3%, rgb(30, 33, 48) 90.2%);
  }
+ .tex{
+    margin-top: 15px;
+    margin-left:5px;
+}
+
 .algiN{
 
 display: flex;
