--- a/client/src/Navbar/page.module.scss
+++ b/client/src/Navbar/page.module.scss
@@ -59,7 +59,8 @@ margin-right: 30px;
   font-family: "Roboto", Arial, "Segoe UI", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  color: #fff;
+  color: #ccc;
+  font-weight: bold;
   z-index: 2;
   margin-left: 10px;
  }
