--- a/client/src/components/Pages/Navbar/page.module.scss
+++ b/client/src/components/Pages/Navbar/page.module.scss
@@ -1,59 +1,48 @@
-.main{
+.main {
+  display: flex;
+  justify-content: space-between;
+  font-family: Helvetica, Helvetica, Arial, sans-serif;
+  color: white;
+  text-align: center;
+  height: 100px;
+  background: transparent;
+  // background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
 
-    display: flex;
-    justify-content: space-between;
-    font-family: Helvetica ,Helvetica,Arial,sans-serif;
-    color: white;
-    text-align: center;
-    height: 100px;
-    background: transparent;
-    // background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%); 
-    padding: 20px;
-    overflow: hidden;
-    top: 0;
+  overflow: hidden;
+  top: 0;
   width: 100%;
-
-  
- 
-
 }
 
-
-.text{
-
+.text {
   text-decoration: white;
- margin-left: 30px;
-color: white;
-margin-right: 5px;
-font-size: 18px;
-font-weight: 400;
-padding: 12px;
- width: auto;
- cursor: pointer;
- border: 3px solid white;
- border-radius: 30px;
- margin-bottom: 10px;
- margin-top: 23px;
- .text2{
-  font-size: xx-large;
-  
- }
+  margin-left: 30px;
+  color: white;
+  margin-right: 5px;
+  font-size: 18px;
+  font-weight: 400;
+  padding: 12px;
+  width: auto;
+  cursor: pointer;
+  border: 3px solid white;
+  border-radius: 30px;
+  margin-bottom: 10px;
+  margin-top: 23px;
+  .text2 {
+    font-size: xx-large;
+  }
 }
-
-
-
 
 .button {
   --border-radius: 30px;
   --border-width: 4px;
   appearance: none;
   position: relative;
-  padding:  1.4em;
+  padding: 1.4em;
   height: 60px;
-  text-align:center ;
-  
+  text-align: center;
+
   margin-top: 20px;
-margin-right: 30px;
+  margin-right: 30px;
   border: 0;
   background-color: transparent;
   font-family: "Roboto", Arial, "Segoe UI", sans-serif;
@@ -63,9 +52,9 @@ margin-right: 30px;
   font-weight: bold;
   z-index: 2;
   margin-left: 10px;
- }
- 
- .button::after {
+}
+
+.button::after {
   --m-i: linear-gradient(#000, #000);
   --m-o: content-box, padding-box;
   content: "";
@@ -76,15 +65,7 @@ margin-right: 30px;
   height: 100%;
   padding: var(--border-width);
   border-radius: var(--border-radius);
-  background-image: conic-gradient(
-     #488cfb,
-     #29dbbc,
-   
-     #ff9f0e,
-    
-     #655adc,
-     #488cfb
-   );
+  background-image: conic-gradient(#488cfb, #29dbbc, #ff9f0e, #655adc, #488cfb);
   -webkit-mask-image: var(--m-i), var(--m-i);
   mask-image: var(--m-i), var(--m-i);
   -webkit-mask-origin: var(--m-o);
@@ -95,28 +76,27 @@ margin-right: 30px;
   filter: hue-rotate(0);
   animation: rotate-hue linear 500ms infinite;
   animation-play-state: paused;
- }
- 
- .button:hover::after {
+}
+
+.button:hover::after {
   animation-play-state: running;
- }
- 
- @keyframes rotate-hue {
+}
+
+@keyframes rotate-hue {
   to {
-   filter: hue-rotate(1turn);
+    filter: hue-rotate(1turn);
   }
- }
- 
- .button::after {
+}
+
+.button::after {
   box-sizing: border-box;
- }
- 
- .button:active {
+}
+
+.button:active {
   --border-width: 5px;
- }
+}
 
-
-
- .heading{
+.heading {
   font-size: xx-large;
- }
+  margin-left: 20px;
+}
