--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,67 @@ code {
   font-weight: bold;
   font-family: Rubik;
 }
+
+/* /////// SIMPLE .SimpbleBtn ///////////////////// */
+
+.SimpbleBtn {
+  --color: rgb(135, 159, 253);
+  font-family: inherit;
+  display: inline-block;
+  width: 8em;
+  height: 2.6em;
+  line-height: 2.5em;
+  margin: 20px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color 0.5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 500;
+  color: var(--color);
+}
+
+.SimpbleBtn:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background: var(--color);
+  height: 150px;
+  width: 200px;
+  border-radius: 50%;
+}
+
+.SimpbleBtn:hover {
+  color: #fff;
+}
+
+.SimpbleBtn:before {
+  top: 100%;
+  left: 100%;
+  transition: all 0.7s;
+}
+
+.SimpbleBtn:hover:before {
+  top: -30px;
+  left: -30px;
+}
+
+.SimpbleBtn:active:before {
+  background: rgb(254, 202, 202);
+  transition: background 0s;
+}
+
+.SimpbleBtn:hover svg {
+  transform: translateX(4px);
+  color: var(--hovered-color);
+}
+
+.SimpbleBtn svg {
+  color: var(--primary-color);
+  transition: 0.2s;
+  position: relative;
+  width: 15px;
+  transition-delay: 0.2s;
+}
