--- a/client/src/components/Pages/Navbar/page.module.scss
+++ b/client/src/components/Pages/Navbar/page.module.scss
@@ -51,7 +51,7 @@
   margin-right: 30px;
   border: 0;
   background-color: transparent;
-  font-family: "Roboto", Arial, "Segoe UI", sans-serif;
+  // font-family: "Roboto", Arial, "Segoe UI", sans-serif;
   font-size: 15px;
   font-weight: 100;
   color: #BBC4C2;
