--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.sidebarandmain {
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
+  height: 100vh;
+  width: 100vw;
+}
