--- a/client/src/components/Pages/Payment/Payment.css
+++ b/client/src/components/Pages/Payment/Payment.css
@@ -1,77 +1,234 @@
 .outerFrame {
-  margin-top: 50px;
-  width: 1000px;
-  height: 655px;
+  margin: 50px;
+  padding: 80px;
   display: flex;
   border-radius: 20px;
   justify-content: center;
   align-items: center;
+  background-color: black;
+  border: 1px solid white;
+}
+.mainPayment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  gap: 20px;
+  background-repeat: repeat;
+}
+.innerFrame {
+  border-radius: 20px;
+  background-color: white;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
 }
 
+.flexItem {
+  display: flex;
+  justify-content: flex-start;
+  align-items: start;
+  height: 600px;
+  flex-direction: column;
+}
 .mainPayment {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.rightgrid {
-  grid-area: right;
-}
-.leftgrid {
-  grid-area: left;
-}
-.innerFrame {
-  display: grid;
-  grid-template-areas: "left left left right right right";
-  width: 100%;
-  height: 100%;
-  gap: 10px;
-  border: 1px solid red;
-  padding: 10px;
+.innerFrame:focus {
+  outline: none;
+  transition: all 3s ease-in-out;
 }
 
-.PrductCard {
-  display: flex;
-  justify-content: top;
-  align-items: center;
-
-  flex-direction: column;
-
-  margin-bottom: 50px;
-  width: 100%;
-  height: 100%;
-  border: 1px solid black;
-  border-radius: 20px;
+.item1 {
+  min-width: 700px;
+  min-height: 200px;
+  max-width: 1000px;
+  padding: 5px;
+  border-right: #000 solid 1px;
 }
 
 .imgofpay {
+  padding: 10px;
   display: flex;
-  justify-content: center;
+  font-size: 20px;
+  justify-content: start;
   align-items: center;
-  width: 200px;
+  font-weight: 600;
+  width: 100%;
   gap: 20px;
 }
-.PrductCard h2 {
+.item1 h2 {
   color: #000;
   margin: 20px;
 }
-.PrductCard img {
-  width: inherit;
+.item1 img {
+  width: 70%;
+  max-width: 400px;
   height: inherit;
   object-fit: cover;
   border-radius: 20px;
 }
-.PaymentCard {
+
+.infoOFitem {
+  width: 50%;
+}
+
+/* quantitiy update */
+
+.qunatity {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 8px;
+  border-bottom: #000 solid 2px;
+  gap: 10px;
+}
+
+.qunatity button {
+  border: 1px solid black;
+  background-color: black;
+  cursor: pointer;
+  font-size: 20px;
+  width: 30px;
+  font-weight: 600;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+.qunatity h3 {
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 25px;
+  min-width: 40px;
+  padding: 5px;
+  max-width: 50px;
   display: flex;
   justify-content: center;
-  align-items: center;
+}
 
+.qunatity p {
+  font-size: 27px;
+  font-weight: 600;
+}
+
+.lowerimg {
+  display: flex;
+  margin-left: 30px;
+  margin-top: 20px;
+  font-size: 23px;
+  font-weight: 600;
+  justify-content: start;
   flex-direction: column;
+  gap: 10px;
+}
 
-  margin-bottom: 50px;
-  width: 100%;
-  height: 100%;
+.inputDate input {
+  width: 170px;
+  padding: 10px;
+  border-radius: 5px;
   border: 1px solid black;
-  border-radius: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  outline: none;
+}
+
+.inputDate {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.Price {
+  padding: 5px;
+  display: flex;
+  margin-right: 23px;
+  justify-content: flex-end;
+  border-bottom: #000 solid 1px;
+}
+
+/*  background  */
+.overlay {
+  position: absolute;
+  top: 50%;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  gap: 150px;
+  left: 50%;
+  text-transform: uppercase;
+  transform: translate(-50%, -50%) rotate(10deg);
+  font-size: 20px;
+  color: grey;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
+.bg-2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 100px;
+}
+
+.detailofproduct {
+  margin-top: 20px;
+  font: 500 16px/1.5 "Roboto", sans-serif;
+}
+
+/* item2 full part (Payment part  ) */
+
+.item2 {
+  margin-left: 20px;
+  min-width: 400px;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+}
+
+.item2 h2 {
+  display: flex;
+  justify-content: center;
+  color: #000;
+  width: 80%;
+  margin: 20px;
+}
+
+.item2 .inputPay {
+  font-size: 20px;
+  font-weight: 600;
+  display: flex;
+  gap: 20px;
+}
+
+.inputPay input {
+  margin-left: 10px;
+  max-width: 70%;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid black;
+  font-size: 20px;
+  font-weight: 400;
+  outline: none;
+}
+
+.PaymentPart {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.selectofinput {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  width: 50%;
 }
