--- a/client/src/UI/Buttons/Submit/Submit.css
+++ b/client/src/UI/Buttons/Submit/Submit.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 140px;
+  max-width: 100%;
   height: 50px;
   border-radius: 0.5em;
   box-shadow: 0 0.625em 1em 0 rgba(106, 173, 240, 0.35);
