--- a/client/src/components/Pages/History/history.css
+++ b/client/src/components/Pages/History/history.css
@@ -1,131 +1,116 @@
-
-
-  .mainDiv{
-    display: flex;
-
-  }
-
-.Div2{
+.mainDiv {
   display: flex;
-margin-top: 10vh;
-
-
- 
 }
-  .card1{
 
- width: 130vh;
- color : black;
- background-color:  rgb(190, 255, 177);
- height :15vh;
- display: flex;
- place-items: center;
-margin-right: 30vh;
- margin-left: 3vh;
- margin-top:5vh;
- border: 5px black ;
+.Div2 {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10vh;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 100%;
+}
+.card1 {
+  width: 100%;
+  color: black;
 
+  height: 15vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 5vh;
+  border: 5px solid black;
+}
 
-  }
+.imagg {
+  height: 100px;
+  width: 100px;
 
-  .imagg{
-    height: 100px;
-    width: 100px;
- 
-    border-radius: 13px;
-    margin-left: 2px;
-  }
+  border-radius: 13px;
+  margin-left: 2px;
+}
 
-   
-.items{
-
+.items {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-
-
-
 }
 
-.gridItems
-{
+.gridItems {
   padding: 20px;
   font-size: 20px;
   align-items: center;
   display: inline-block;
   text-align: center;
-  margin-top: 50px;
-  margin-left: 50px;
 }
 
-  .button2 {
-    display: inline-block;
-    transition: all 0.2s ease-in;
-    position: relative;
-    overflow: hidden;
+.button2 {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
 
-    z-index: 1;
-    color: #090909;
-    padding: 0.7em 1.7em;
-    font-size: 18px;
-    border-radius: 0.5em;
-    background: #e8e8e8;
-    border: 1px solid #e8e8e8;
-    box-shadow: 6px 6px 12px #c5c5c5,
-               -6px -6px 12px #ffffff;
-  }
-  
-  .button2:active {
-    color: #666;
-    box-shadow: inset 4px 4px 12px #c5c5c5,
-               inset -4px -4px 12px #ffffff;
-  }
-  
-  .button2:before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%) scaleY(1) scaleX(1.25);
-    top: 100%;
-    width: 140%;
-    height: 180%;
-    background-color: rgba(0, 0, 0, 0.05);
-    border-radius: 50%;
-    display: block;
-    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-    z-index: -1;
-  }
-  
-  .button2:after {
-    content: "";
-    position: absolute;
-    left: 55%;
-    transform: translateX(-50%) scaleY(1) scaleX(1.45);
-    top: 180%;
-    width: 160%;
-    height: 190%;
-    background-color:  rgb(190, 255, 177);
-    border-radius: 50%;
-    display: block;
-    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-    z-index: -1;
-  }
-  
-  .button2:hover {
-    color: #ffffff;
-    border: 1px solid  rgb(190, 255, 177);
-  }
-  
-  .button2:hover:before {
-    top: -35%;
-    background-color:  rgb(190, 255, 177);
-    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-  }
-  
-  .button2:hover:after {
-    top: -45%;
-    background-color:  rgb(190, 255, 177);
-    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-  }
-  
+  z-index: 1;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+}
 
-  
+.button2:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.button2:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: rgb(254, 202, 202);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:hover {
+  color: #ffffff;
+  border: 1px solid rgb(254, 202, 202);
+}
+
+.button2:hover:before {
+  top: -35%;
+  background-color: rgb(254, 202, 202);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button2:hover:after {
+  top: -45%;
+  background-color: rgb(254, 202, 202);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
