--- a/client/src/components/Sidebar/Sidebar.module.css
+++ b/client/src/components/Sidebar/Sidebar.module.css
@@ -2,42 +2,40 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
-
 }
 
-
-
 .sidebar {
-
   margin-left: 5px;
   height: 100vh;
   color: white;
-background-color: rgb(190, 255, 177);
+  background-image: linear-gradient(
+    to right,
+    rgb(199, 210, 254),
+    rgb(254, 202, 202),
+    rgb(254, 249, 195)
+  );
 
- border: 5px ;
- border-color: rgb(0, 0, 0);
-border-top-right-radius: 100px;
-  width:35vh;
+  border: 5px;
+  border-color: rgb(0, 0, 0);
+  border-top-right-radius: 100px;
+  width: 35vh;
   padding-top: 35vh;
   outline-offset: 5px;
-  outline-color: rgb(190, 255, 177) ;
+  outline-color: rgb(190, 255, 177);
   outline-style: solid;
 }
 
-
-
 .button {
-  
   appearance: none;
   background-color: transparent;
-  border: 0.125em solid #1A1A1A;
+  border: 0.125em solid #1a1a1a;
   border-radius: 0.9375em;
   box-sizing: border-box;
-  color: #3B3B3B;
+  color: #3b3b3b;
   cursor: pointer;
   display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   font-weight: 600;
   line-height: normal;
@@ -49,7 +47,7 @@ border-top-right-radius: 100px;
   padding: 1em 2.3em;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -57,25 +55,23 @@ border-top-right-radius: 100px;
   margin-top: 10px;
   margin-left: 5px;
   z-index: 2;
- }
- 
- .button:disabled {
+}
+
+.button:disabled {
   pointer-events: none;
   z-index: 2;
- }
- 
- .button:hover {
+}
+
+.button:hover {
   color: #fff;
-  background-color: #1A1A1A;
+  background-color: #1a1a1a;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
   z-index: 2;
- }
- 
- .button:active {
+}
+
+.button:active {
   box-shadow: none;
   transform: translateY(0);
   z-index: 2;
- }
-
- 
+}
