--- a/client/src/components/Sidebar/Sidebar.module.css
+++ b/client/src/components/Sidebar/Sidebar.module.css
@@ -6,6 +6,10 @@
 
 .sidebar {
   margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
   height: 100vh;
   color: white;
   background-image: linear-gradient(
@@ -14,12 +18,12 @@
     rgb(254, 202, 202),
     rgb(254, 249, 195)
   );
-
+  gap: 20px;
   border: 5px;
   border-color: rgb(0, 0, 0);
   border-top-right-radius: 100px;
   width: 35vh;
-  padding-top: 35vh;
+  padding-top: 25vh;
   outline-offset: 5px;
   outline-color: rgb(190, 255, 177);
   outline-style: solid;
