--- a/client/src/components/Pages/Api/Api.css
+++ b/client/src/components/Pages/Api/Api.css
@@ -1,47 +1,117 @@
 .mainDiv {
   display: flex;
-  border: 3px black;
-  border-radius: 10px;
-  background-image: linear-gradient(
-    to right,
-    rgb(199, 210, 254),
-    rgb(254, 202, 202),
-    rgb(254, 249, 195)
-  );
+  height: 100vh;
 }
 
-.div2 {
+.Div2 {
   display: flex;
-  flex-direction: column;
   justify-content: start;
   align-items: center;
+  flex-direction: column;
+  margin-top: 10vh;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 100%;
+}
+.card1 {
+  width: 100%;
+  color: black;
 
-  color: rgb(190, 255, 177);
+  height: 15vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 5vh;
+  border: 5px solid black;
 }
 
-.Heading {
-  color: white;
-  margin-top: 20px;
-  font-size: 75px;
-  font-family: "Times New Roman", Times, serif;
-  margin-left: 45vh;
+.imagg {
+  height: 100px;
+  width: 100px;
 
-  margin-bottom: 20px;
+  border-radius: 13px;
+  margin-left: 2px;
+}
+
+.items {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
+
+.gridItems {
+  padding: 20px;
+  font-size: 20px;
+  align-items: center;
+  display: inline-block;
   text-align: center;
 }
 
-.items1 {
-  margin-left: 50vh;
-}
-.items2 {
-  margin-top: 100px;
-  margin-left: 50vh;
-  margin-bottom: 100px;
-}
-.sidebar1 {
-  position: fixed;
+.button2 {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+
+  z-index: 1;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
 }
 
-.textarea {
-  font-size: 20px;
+.button2:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.button2:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: rgb(254, 202, 202);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:hover {
+  color: #ffffff;
+  border: 1px solid rgb(254, 202, 202);
+}
+
+.button2:hover:before {
+  top: -35%;
+  background-color: rgb(254, 202, 202);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button2:hover:after {
+  top: -45%;
+  background-color: rgb(254, 202, 202);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
