--- a/client/src/components/Pages/history/history.css
+++ b/client/src/components/Pages/history/history.css
@@ -17,7 +17,7 @@
   width: 100%;
   color: black;
 
-  height: 15vh;
+  height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
