--- a/client/src/components/Pages/HomePage/Home.css
+++ b/client/src/components/Pages/HomePage/Home.css
@@ -25,13 +25,23 @@
   margin: 0;
   display: flex;
   align-items: center;
-
+  justify-content: space-evenly;
   background-image: black;
   height: 100vh;
   width: 100%;
+  margin-left: 20px;
+  margin-right: 20px;
   font-family: sans-serif;
 }
 
+.buttondemo {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  font-size: 20px;
+  flex-direction: column;
+  align-items: center;
+}
 .a {
   margin: 0;
   padding: 0;
