--- a/client/src/components/Pages/UserHistory/History.css
+++ b/client/src/components/Pages/UserHistory/History.css
@@ -1,6 +1,6 @@
 .mainDiv {
   display: flex;
-  height: 100%;
+  height: 100vh;
 }
 
 .Div2 {
@@ -15,9 +15,10 @@
 }
 .card1 {
   width: 100%;
+  max-width: 1000px;
   color: black;
 
-  height: 100px;
+  height: 150px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -26,13 +27,13 @@
   margin-top: 5vh;
   border: 5px solid black;
 }
+
 .titleofHistory {
   font-size: 60px;
   font-weight: 600;
   margin-bottom: 10px;
   margin-top: 10px;
 }
-
 .imagg {
   height: 100px;
   width: 100px;
