--- a/client/src/components/Pages/history/history.css
+++ b/client/src/components/Pages/history/history.css
@@ -26,6 +26,12 @@
   margin-top: 5vh;
   border: 5px solid black;
 }
+.titleofHistory {
+  font-size: 60px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
 
 .imagg {
   height: 100px;
